--- a/gallery.html
+++ b/gallery.html
@@ -1,152 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- head -->
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/slideshow.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="scripts/responsiveslides.min.js"></script>
-    <script src="scripts/slideshow.js"></script>
-    <!-- Web title -->
-    <title>PJC Gallery</title>
-  </head>
+<!-- head -->
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:image" content="https://xjasonx.github.io/Photographer-Site/images/logo.jpg">
 
-  <!-- Body -->
-  <body>
-    <!-- Header -->
-    <header>
+  <!-- JQuery Import -->
+  <script src="js/jquery-3.2.1.min.js"></script>
+  <!-- Bootstrap 4 CSS Imports -->
+  <link rel="stylesheet" href="styles/bootstrap.min.css">
+  <!-- Default Styling -->
+  <link rel="stylesheet" href="styles/nav.css">
+  <link rel="stylesheet" href="styles/footer.css">
+  <link rel="stylesheet" href="styles/gallery.css">
+  <!-- Icons -->
+  <link rel="shortcut icon" type="image/x-icon" href="images/logo.ico">
+  <!-- Web title -->
+  <title>PJC Gallery</title>
+</head>
+
+<!-- Body -->
+<body>
+  <!-- Header -->
+  <!-- Header -->
+  <header>
+    <div class="banner">
       <div class="container">
-        <div class="header-main">
-          <div class="logo">
-            <a href="index.html"><img src="images/logo.png" alt="PJC Gallery logo"><h3>PJC Gallery</h3></a>
-          </div>
-          <!-- Navigation -->
-          <nav>
-            <ul class="nav-bar">
-              <li class="hidden-xs"><a href="#about">About</a></li>
-              <li class="hidden-xs"><a href="#features">Features</a></li>
-              <li class="hidden-xs"><a href="gallery.html">Portfolio</a></li>
-              <li class="hidden-xs"><a href="#contact">Contact</a></li>
-              <li class="visible-xs">
-                <span class="dropdown">
-                  <button class="dropdown-btn dropdown-toggle" type="button" data-toggle="dropdown">
-                    <span class="glyphicon glyphicon-menu-hamburger"></span>
-                  </button>
-                  <ul class="dropdown-menu dropdown-menu-right">
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#features">Features</a></li>
-                    <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                  </ul>
-                </span>
-              </li>
-            </ul>
-          </nav>
-          <!-- End of Navigation -->
+        <nav>
+          <ul class="row align-items-center hidden-xs-down">
+            <li class="col-sm-2"><a href="index.html#about">About</a></li>
+            <li class="col-sm-2"><a href="index.html#team">Team</a></li>
+            <li class="col-sm-4"><a href="index.html"><img class="logo img-fluid" src="images/rsz_logo.png" alt="PJC Gallery"></a></li>
+            <li class="col-sm-2"><a href="gallery.html">Gallery</a></li>
+            <li class="col-sm-2"><a href="index.html#contact">Contact</a></li>
+          </ul>
           <div class="clearfix"></div>
-        </div>
+          <hr class="hidden-xs-down">
+        </nav>
       </div>
-    </header>
-    <!-- End of Header -->
-    <div class="content" id="gallery">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <h1 class="page-header">Thumbnail Gallery</h1>
-          </div>
-          <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a class="thumbnail" href="#">
-              <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-            </a>
-          </div>
-          <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a class="thumbnail" href="#">
-              <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-            </a>
-          </div>
-          <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a class="thumbnail" href="#">
-              <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-            </a>
-          </div>
-          <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a class="thumbnail" href="#">
-              <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-            </a>
-          </div>
-          <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a class="thumbnail" href="#">
-              <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-            </a>
-          </div>
-          <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a class="thumbnail" href="#">
-              <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-            </a>
-          </div>
-          <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a class="thumbnail" href="#">
-              <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-            </a>
-          </div>
-          <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a class="thumbnail" href="#">
-              <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-            </a>
-          </div>
-          <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a class="thumbnail" href="#">
-              <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-            </a>
-          </div>
-          <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a class="thumbnail" href="#">
-              <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-            </a>
-          </div>
-          <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a class="thumbnail" href="#">
-              <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-            </a>
-          </div>
-          <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-            <a class="thumbnail" href="#">
-              <img class="img-responsive" src="http://placehold.it/400x300" alt="">
-            </a>
-          </div>
+    </div>
+  </header>
+  <!-- End of Header -->
+  <div class="content" id="gallery">
+    <div class="container">
+      <div class="row text-center text-lg-left">
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="http://placehold.it/400x300" alt="">
+          </a>
         </div>
       </div>
     </div>
+  </div>
 
-    <!-- Footer -->
-    <footer>
-      <!-- Contact -->
-      <div id="contact">
-        <div class="container">
-          <ul class="contact-info">
-            <li><p><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>The company name, Glasglow Dr 40 Fe 72.</p></li>
-            <li><p><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>+755 265 8822 , +955 326 3695</p></li>
-            <li><p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>Email: <a href="mailto:example@email.com">contact@example.com</a></p></li>
-          </ul>
-          <div class="clearfix"></div>
-        </div>
-      </div>
-      <!-- End of Contact -->
+  <!-- Footer -->
+  <footer>
+    <!-- Contact -->
+    <div id="contact">
       <div class="container">
-        <div class="footer-top">
-          <ul>
-            <li><a href="https://www.facebook.com/PJC-Photography-729802163862623"><span class="fb"></span></a></li>
-            <li><a href="#"><span class="twit"></span></a></li>
-            <li><a href="#"><span class="google"></span></a></li>
-          </ul>
-          <p>Copyright &copy; 2017 <a target="_blank">Sagitta CA</a> All Rights Reserved.</p>
-        </div>
+        <ul class="contact-info">
+          <li><p><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>The company name, Glasglow Dr 40 Fe 72.</p></li>
+          <li><p><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>+755 265 8822 , +955 326 3695</p></li>
+          <li><p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>Email: <a href="mailto:example@email.com">contact@example.com</a></p></li>
+        </ul>
+        <div class="clearfix"></div>
       </div>
-    </footer>
-    <!-- End of Footer -->
-  </body>
+    </div>
+    <!-- End of Contact -->
+    <div class="container">
+      <div class="footer-top">
+        <ul>
+          <li><a href="https://www.facebook.com/PJC-Photography-729802163862623"><span class="fb"></span></a></li>
+          <li><a href="#"><span class="twit"></span></a></li>
+          <li><a href="#"><span class="google"></span></a></li>
+        </ul>
+        <p>Copyright &copy; 2017 <a target="_blank">Sagitta CA</a> All Rights Reserved.</p>
+      </div>
+    </div>
+  </footer>
+  <!-- End of Footer -->
+</body>
 </html>
