--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
     <meta property="og:image" content="https://xjasonx.github.io/Photographer-Site/images/logo.jpg">
     <!-- JQuery Import -->
     <script src="js/jquery-3.2.1.min.js"></script>
-    <!-- Bootstrap 4 CSS Imports -->
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <!-- Tether Import -->
+    <script src="js/tether.min.js"></script>
+    <!-- Bootstrap 4 Imports -->
+    <script src="js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css">
     <!-- Default Styling -->
-    <link rel="stylesheet" href="styles/nav.css">
-    <link rel="stylesheet" href="styles/footer.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/nav.css">
+    <link rel="stylesheet" type="text/css" href="styles/footer.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <!-- Default Scripts -->
+    <script src="js/header-animation.js"></script>
     <!-- Icons -->
     <link rel="shortcut icon" type="image/x-icon" href="images/logo.ico">
     <!-- Web title -->
@@ -30,15 +35,35 @@
     <!-- Header -->
     <header>
       <div class="banner" id="home">
+        <div class="fixed-nav">
+          <div class="navbar fixed-top navbar-toggleable-md navbar-inverse bg-inverse" role="navigation">
+            <div class="nav-container container">
+              <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <a class="navbar-brand" href="#home">PJC Gallery</a>
+              <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                  <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                  <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
+                  <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                  <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="container">
           <nav>
-            <ul class="row align-items-center hidden-xs-down">
-              <li class="col-sm-2"><a href="#about">About</a></li>
-              <li class="col-sm-2"><a href="#team">Team</a></li>
-              <li class="col-sm-4"><a href="#home"><img class="logo img-fluid" src="images/rsz_logo.png" alt="PJC Gallery"></a></li>
-              <li class="col-sm-2"><a href="gallery.html">Gallery</a></li>
-              <li class="col-sm-2"><a href="#contact">Contact</a></li>
-            </ul>
+            <div class="header-nav">
+              <ul class="row align-items-center hidden-xs-down">
+                <li class="col-sm-2"><a href="#about">About</a></li>
+                <li class="col-sm-2"><a href="#team">Team</a></li>
+                <li class="col-sm-4"><a href="#home"><img class="logo img-fluid" src="images/rsz_logo.png" alt="PJC Gallery"></a></li>
+                <li class="col-sm-2"><a href="gallery.html">Gallery</a></li>
+                <li class="col-sm-2"><a href="#contact">Contact</a></li>
+              </ul>
+            </div>
             <div class="clearfix"></div>
             <hr class="hidden-xs-down">
           </nav>
