--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta property="og:image" content="https://xjasonx.github.io/Photographer-Site/images/logo.jpg">
     <!-- JQuery 3.2.1 Import -->
     <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
     <!-- Tether Import -->
     <script src="js/tether.min.js"></script>
     <!-- Bootstrap 4 Imports -->
@@ -23,7 +24,7 @@
     <link rel="stylesheet" type="text/css" href="styles/footer.css">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <!-- Default Scripts -->
-    <script src="js/header-animation.js"></script>
+    <script src="js/scrolling-nav.js"></script>
     <!-- Icons -->
     <link rel="shortcut icon" type="image/x-icon" href="images/logo.ico">
     <!-- Web title -->
@@ -41,13 +42,13 @@
               <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <a class="navbar-brand" href="#home">PJC Gallery</a>
+              <a class="scroll navbar-brand" href="#home">PJC Gallery</a>
               <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                  <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                  <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
+                  <li class="nav-item"><a class="scroll nav-link" href="#about">About</a></li>
+                  <li class="nav-item"><a class="scroll nav-link" href="#team">Team</a></li>
                   <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
-                  <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                  <li class="nav-item"><a class="scroll nav-link" href="#contact">Contact</a></li>
                 </ul>
               </div>
             </div>
@@ -57,11 +58,11 @@
           <nav>
             <div class="header-nav">
               <ul class="row align-items-center hidden-xs-down">
-                <li class="col-sm-2"><a href="#about">About</a></li>
-                <li class="col-sm-2"><a href="#team">Team</a></li>
-                <li class="col-sm-4"><a href="#home"><img class="logo img-fluid" src="images/rsz_logo.png" alt="PJC Gallery"></a></li>
-                <li class="col-sm-2"><a href="gallery.html">Gallery</a></li>
-                <li class="col-sm-2"><a href="#contact">Contact</a></li>
+                <li class="col-sm-2"><a class="scroll" href="#about">About</a></li>
+                <li class="col-sm-2"><a class="scroll" href="#team">Team</a></li>
+                <li class="col-sm-4"><a class="scroll" href="#home"><img class="logo img-fluid" src="images/rsz_logo.png" alt="PJC Gallery"></a></li>
+                <li class="col-sm-2"><a class="scroll" href="gallery.html">Gallery</a></li>
+                <li class="col-sm-2"><a class="scroll" href="#contact">Contact</a></li>
               </ul>
             </div>
             <div class="clearfix"></div>
